# igem_registry_api

./: .env.example  .gitattributes  .gitignore  LICENSE  pyproject.toml
.github/workflows/: release.yml
examples/: part_metadata.py  part_retrieve.py  quickstart.py  registry_blast.py  registry_dump.py  test.ipynb  users_orgs.py
examples/data/: parts.tar.br  query.fasta
src/igem_registry_api/: __init__.py  __meta__.py  account.py  accounts.py  annotation.py  author.py  calls.py  categories.py  category.py  client.py  collections.py  errors.py  license.py  licenses.py  listings.py  organisation.py  organisations.py  part.py  parts.py  rates.py  schemas.py  type.py  types.py  utils.py
tests/: types_test.py
